{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "CharacterControl",
            "id": "dfcaee68-1b50-4fae-81f8-0211de7634da",
            "actions": [
                {
                    "name": "MoveCharacter",
                    "type": "Value",
                    "id": "9745f104-2f35-46b2-9891-480ff3e9001f",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "8ebd8d40-6761-4573-997d-3afdad815f85",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SkillA",
                    "type": "Button",
                    "id": "2266fb46-fdd0-47ee-b47e-d68f1d03c8a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillB",
                    "type": "Button",
                    "id": "e44138c3-206c-4b77-a194-31a43eecb9e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillC",
                    "type": "Button",
                    "id": "49dd2310-d15f-43b9-a09b-e86df7296995",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillD",
                    "type": "Button",
                    "id": "5579f2b0-ddaa-4b7b-9289-a98c33bc41f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54acb6e2-da58-4aac-9a22-71a0bc73779d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06abd9f3-2f3c-4033-851a-625cfc253ffb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4870f5e7-4e6c-44f0-9dae-16e145954809",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "514a9d95-928b-4159-b2a8-835a9c2f7845",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c7ece23-bc4c-4f45-8258-57db880acd9a",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d3fceda-d37d-4b8c-b8e1-6f02bee265ea",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillD",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GeneralControl",
            "id": "7d74c59e-d678-4321-8d55-628629a380a8",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "d5e2a09c-c9c1-4e94-b4b9-0d3a5ce84d36",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e82279a-1309-4df2-8964-747d8d6b4cd5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}